<resources>
    <string name="app_name">FirebaseLogin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">Sign In</string>
    <string name="update">UPDATE</string>
    <string name="loading">LOADING.........</string>
</resources>